--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.7"
+    "@astrojs/preact": "^4.0.3",
+    "astro": "^5.1.7",
+    "preact": "^10.25.4"
   }
 }
