added cloudflare for ssr

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.2.1",
     "@astrojs/preact": "^4.0.3",
     "astro": "^5.1.7",
     "lightgallery": "^2.8.2",
