--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.1",
     "@astrojs/preact": "^4.0.3",
+    "@astrojs/react": "^4.2.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.7",
-    "lightgallery": "^2.8.2",
-    "preact": "^10.25.4"
+    "preact": "^10.25.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
